Fixed place and Gallery misalignment.

--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,4 +1,7 @@
+
+
 .gal{
+	margin: 62px auto 0 auto;
 	background-color: white;
 	padding: 3px;
 	width: 60%;
@@ -7,14 +10,15 @@
 h2{
 	font-family: "Gotham Light";
 	font-weight: bold;
+	font-size: 1.5em;
 	text-transform: uppercase;
 	letter-spacing: 0.3em;
-	width: 60%;
+	width: 99%;
 	background-color: #0097A7;
 	padding: 20px;
 	text-align: center;
 	color: #eee;
-	margin: 20px auto 20px auto;
+	margin: 20px 0.5% 20px 0.5%;
 }
 
 .image{
